--- a/example.env
+++ b/example.env
@@ -11,7 +11,7 @@ ASSET_URL=/public/assets
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=smartics
+DB_DATABASE=epic
 DB_USERNAME=root
 DB_PASSWORD=
 
